refactor: 优化文件下载工具